Update workflow and test-deploy script to execute import commands before deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name: Deploy Infrastructure
+name: Deploy Production Experience
 # Automated deployment workflow for the Production Experience project
 # For complete documentation, see .github/CICD.md
 
 on:
   push:
-    branches: [main]
+    branches: ['main']
   workflow_dispatch:
 
 jobs:
@@ -12,32 +12,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 18.20.7
-      - uses: hashicorp/setup-terraform@v3
+          node-version: '18.x'
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 1.5.7
+          terraform_version: 1.5.0
+
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
-      - run: npm install -g cdktf-cli@0.20.7
-      - run: npm ci
-      - run: rm -rf .gen # Clean generated files
-      - run: cdktf get --skip-provider-schema-validation || (echo "Retrying cdktf get..." && cdktf get --skip-provider-schema-validation) # Retry on failure
-      - run: npm run synth
-      - run: chmod +x import-commands.sh
-      - run: cp import-commands.sh cdktf.out/stacks/prod-e/
-      - run: cd cdktf.out/stacks/prod-e && terraform init -upgrade && sh ./import-commands.sh > import-commands.log 2>&1 && cat import-commands.log && cd ../../..
-      - run: chmod +x scripts/monitoring/resource_check.sh
-      - run: scripts/monitoring/resource_check.sh
-      - run: npm test
-      - run: cd infrastructure/lambda && rm -f backup.zip && zip -j backup.zip backup.js && ls -la backup.zip && unzip -l backup.zip && cp backup.zip ../../dummy-backup.zip && ls -la ../../dummy-backup.zip
-      - run: cp dummy-backup.zip cdktf.out/stacks/prod-e/
-      - run: cdktf deploy --auto-approve
+
+      - name: Install cdktf-cli
+        run: npm install -g cdktf-cli
+
+      - name: Install packages
+        run: npm ci
+
+      - name: Clean cdktf.out
+        run: rm -rf cdktf.out
+
+      - name: Run tests
+        run: npm test
+
+      - name: Get dependencies
+        run: cdktf get
+
+      - name: Synthesize
+        run: npm run synth
+
+      - name: Create Lambda zip file
+        run: |
+          mkdir -p node_modules/backup
+          cp -r infrastructure/backup.js node_modules/backup/
+          cd node_modules/backup
+          zip -r backup.zip .
+          cp backup.zip ../../
+          cd ../../
+          mv backup.zip dummy-backup.zip
+
+      - name: Copy and execute import script
+        run: |
+          chmod +x import-commands.sh
+          cp import-commands.sh cdktf.out/stacks/prod-e/
+          cd cdktf.out/stacks/prod-e/
+          ../../import-commands.sh > import-commands.log 2>&1 || echo "Import commands completed with some errors"
+          cd ../../..
+
+      - name: Deploy
+        run: cdktf deploy --auto-approve
 
   resource-check:
     needs: deploy
