--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
+      - name: Debug - Check cdktf.json content
+        run: |
+          echo "Content of cdktf.json:"
+          cat cdktf.json
+          echo "File encoding check:"
+          file cdktf.json
+
       - name: Install cdktf-cli
         run: npm install -g cdktf-cli
 
@@ -40,8 +47,8 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Get dependencies
-        run: cdktf get
+      - name: Get dependencies with skip-provider-schema-validation
+        run: cdktf get --skip-provider-schema-validation
 
       - name: Synthesize
         run: npm run synth
