dynamic check for workflow to query existing states

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,16 +101,20 @@ jobs:
         run: |
           cd cdktf.out/stacks/prod-e/
           terraform init -upgrade
-          # Remove resources that might conflict (from import-commands.sh)
-          terraform state rm aws_db_subnet_group.prode_rds_newsubnetgroup_8B244C0C || true
-          terraform state rm aws_iam_role.prode_ecs_ecstaskexecutionrole_20EAF6F9 || true
-          terraform state rm aws_iam_role.prode_ecs_ecstaskrole_83A127B2 || true
-          terraform state rm aws_lb.prode_alb_5B6BC7FD || true
-          terraform state rm aws_lb_target_group.prode_alb_ecstargetgroup_D11F7D5C || true
-          terraform state rm aws_lb_target_group.prode_alb_grafanatargetgroup_F3AF7448 || true
-          terraform state rm aws_lb_target_group.prode_alb_prometheustargetgroup_F7AD68CC || true
-          terraform state rm aws_lambda_function.prode_backup_backuplambda_D9B46980 || true
-          terraform state rm aws_s3_bucket.prode_backup_backupbucket_A17FE2F3 || true
+          # Disable exit-on-error for this block
+          set +e
+          # Remove resources that might conflict (from import-commands.sh), only if they exist
+          terraform state list | grep -q "aws_db_subnet_group.prode_rds_newsubnetgroup_8B244C0C" && terraform state rm aws_db_subnet_group.prode_rds_newsubnetgroup_8B244C0C
+          terraform state list | grep -q "aws_iam_role.prode_ecs_ecstaskexecutionrole_20EAF6F9" && terraform state rm aws_iam_role.prode_ecs_ecstaskexecutionrole_20EAF6F9
+          terraform state list | grep -q "aws_iam_role.prode_ecs_ecstaskrole_83A127B2" && terraform state rm aws_iam_role.prode_ecs_ecstaskrole_83A127B2
+          terraform state list | grep -q "aws_lb.prode_alb_5B6BC7FD" && terraform state rm aws_lb.prode_alb_5B6BC7FD
+          terraform state list | grep -q "aws_lb_target_group.prode_alb_ecstargetgroup_D11F7D5C" && terraform state rm aws_lb_target_group.prode_alb_ecstargetgroup_D11F7D5C
+          terraform state list | grep -q "aws_lb_target_group.prode_alb_grafanatargetgroup_F3AF7448" && terraform state rm aws_lb_target_group.prode_alb_grafanatargetgroup_F3AF7448
+          terraform state list | grep -q "aws_lb_target_group.prode_alb_prometheustargetgroup_F7AD68CC" && terraform state rm aws_lb_target_group.prode_alb_prometheustargetgroup_F7AD68CC
+          terraform state list | grep -q "aws_lambda_function.prode_backup_backuplambda_D9B46980" && terraform state rm aws_lambda_function.prode_backup_backuplambda_D9B46980
+          terraform state list | grep -q "aws_s3_bucket.prode_backup_backupbucket_A17FE2F3" && terraform state rm aws_s3_bucket.prode_backup_backupbucket_A17FE2F3
+          # Re-enable exit-on-error
+          set -e
           cd ../../
 
       - name: Initialize Terraform and execute import script
