--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,12 +117,13 @@ jobs:
       - name: Initialize Terraform and execute import script
         run: |
           chmod +x import-commands.sh
-          ls -l import-commands.sh
+          ls -l import-commands.sh  # Debug: Check script in root
+          cp import-commands.sh cdktf.out/stacks/prod-e/
+          ls -l cdktf.out/stacks/prod-e/import-commands.sh  # Debug: Check script after copy
           cd cdktf.out/stacks/prod-e/
-          ls -l ../../import-commands.sh
           terraform init -upgrade
-          echo "Attempting to run import script: $(ls -l /home/runner/work/prod-e/prod-e/import-commands.sh)"
-          sh /home/runner/work/prod-e/prod-e/import-commands.sh > import-commands.log 2>&1 || echo "Script failed, check log"
+          echo "Running import script: $(ls -l ./import-commands.sh)"
+          sh ./import-commands.sh > import-commands.log 2>&1 || { echo "Script failed, check log"; cat import-commands.log; exit 1; }
           cat import-commands.log
           cd ../../
 
