--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -133,15 +133,15 @@ jobs:
           terraform init -upgrade
           terraform state list > state-after-imports.log
           cat state-after-imports.log
-          grep "aws_db_subnet_group.prode_rds_newsubnetgroup_8B244C0C" state-after-imports.log || { echo "Error: DB subnet group not imported"; exit 1; }
-          grep "aws_iam_role.prode_ecs_ecstaskexecutionrole_20EAF6F9" state-after-imports.log || { echo "Error: ECS task execution role not imported"; exit 1; }
-          grep "aws_iam_role.prode_ecs_ecstaskrole_83A127B2" state-after-imports.log || { echo "Error: ECS task role not imported"; exit 1; }
-          grep "aws_lb.prode_alb_5B6BC7FD" state-after-imports.log || { echo "Error: ALB not imported"; exit 1; }
-          grep "aws_lb_target_group.prode_alb_ecstargetgroup_D11F7D5C" state-after-imports.log || { echo "Error: ECS target group not imported"; exit 1; }
-          grep "aws_lb_target_group.prode_alb_grafanatargetgroup_F3AF7448" state-after-imports.log || { echo "Error: Grafana target group not imported"; exit 1; }
-          grep "aws_lb_target_group.prode_alb_prometheustargetgroup_F7AD68CC" state-after-imports.log || { echo "Error: Prometheus target group not imported"; exit 1; }
-          grep "aws_lambda_function.prode_backup_backuplambda_D9B46980" state-after-imports.log || { echo "Error: Lambda function not imported"; exit 1; }
-          grep "aws_s3_bucket.prode_backup_backupbucket_A17FE2F3" state-after-imports.log || { echo "Error: S3 bucket not imported"; exit 1; }
+          grep "aws_db_subnet_group.rds_new-subnet-group_E54AD540" state-after-imports.log || { echo "Error: DB subnet group not imported"; exit 1; }
+          grep "aws_iam_role.ecs_ecs-task-execution-role_3775D793" state-after-imports.log || { echo "Error: ECS task execution role not imported"; exit 1; }
+          grep "aws_iam_role.ecs_ecs-task-role_12D46AC3" state-after-imports.log || { echo "Error: ECS task role not imported"; exit 1; }
+          grep "aws_lb.alb_88D76693" state-after-imports.log || { echo "Error: ALB not imported"; exit 1; }
+          grep "aws_lb_target_group.alb_ecs-target-group_7A1FFA55" state-after-imports.log || { echo "Error: ECS target group not imported"; exit 1; }
+          grep "aws_lb_target_group.alb_grafana-target-group_B6047762" state-after-imports.log || { echo "Error: Grafana target group not imported"; exit 1; }
+          grep "aws_lb_target_group.alb_prometheus-target-group_64B90CF3" state-after-imports.log || { echo "Error: Prometheus target group not imported"; exit 1; }
+          grep "aws_lambda_function.backup_backup-lambda_62A5F41F" state-after-imports.log || { echo "Error: Lambda function not imported"; exit 1; }
+          grep "aws_s3_bucket.backup_backup-bucket_F99A4016" state-after-imports.log || { echo "Error: S3 bucket not imported"; exit 1; }
           cd ../../
 
       - name: Deploy
