--- a/package.json
+++ b/package.json
@@ -1,40 +1,36 @@
 {
   "name": "prod-e",
-  "version": "1.0.0",
-  "main": "main.js",
-  "types": "main.ts",
   "license": "MPL-2.0",
-  "private": true,
+  "private": "true",
   "scripts": {
-    "get": "cdktf get",
-    "build": "tsc",
-    "synth": "cdktf synth",
-    "compile": "tsc --pretty",
-    "watch": "tsc -w",
+    "synth": "npx cdktf synth",
+    "get": "npx cdktf get",
+    "deploy": "npx cdktf deploy $PROJECT_NAME",
+    "destroy": "npx cdktf destroy $PROJECT_NAME",
+    "watch": "npx tsc -w",
     "test": "jest",
     "test:watch": "jest --watch",
     "upgrade": "npm i cdktf@latest cdktf-cli@latest",
-    "upgrade:next": "npm i cdktf@next cdktf-cli@next",
-    "deploy": "cdktf deploy prod-e",
-    "destroy": "cdktf destroy prod-e",
     "build:docker": "./scripts/build-and-push.sh"
   },
   "engines": {
     "node": ">=18.0"
   },
   "dependencies": {
-    "@cdktf/provider-aws": "^12.0.0",
+    "@cdktf/provider-aws": "^19.57.0",
     "archiver": "^7.0.1",
-    "cdktf": "^0.16.0",
-    "constructs": "^10.2.0",
-    "jszip": "^3.10.1"
+    "cdktf": "^0.20.11",
+    "constructs": "^10.3.0",
+    "dotenv": "^16.4.7",
+    "jszip": "^3.10.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.10",
+    "@types/node": "^20.11.30",
+    "cdktf-cli": "^0.20.11",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.6",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "ts-jest": "^29.2.6"
   }
 }
