--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,27 +1,25 @@
-# Multi-stage build for Node.js application
-# Stage 1: Build
-FROM node:18 AS builder
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY index.js .
-
-# Stage 2: Production
-FROM node:18-slim
+# Single-stage build
+FROM node:18
 WORKDIR /app
 ENV NODE_ENV=production
 
-# Install netcat for healthcheck
+# Install netcat for healthcheck and other potential dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
+# Copy application files
 COPY package*.json ./
-RUN npm install --omit=dev
-COPY --from=builder /app/index.js ./
+COPY index.js ./
+# Add other source files if needed, e.g., COPY src/ ./src/
 
+# Install production dependencies
+RUN npm install --omit=dev
+
+# Set up non-root user
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 --ingroup nodejs nodeuser
+# Ensure app directory ownership is correct *before* switching user
 RUN chown -R nodeuser:nodejs /app
 USER nodeuser
 
